syntax = "proto3";
option go_package = ".;pb";
import "errorcode.proto";

message ErrorData {
  ErrorCode Code = 1;
  string Message = 2;
}
//网关Http 路由请求
message Rpc_GatewayHttpRouteReq {
  string MsgName = 1;
  map<string,string> Meta = 2;
  bytes Message = 3;
}

message Rpc_GatewayHttpRouteResp {
  string ContentType = 1;
  bytes Body = 2;
}