syntax = "proto3";
option go_package = ".;pb";
import "market/market_db.proto";


/*
获取实时行情请求
*/
message MarketGetRealTimeIndexsReq {
    
}
/*
获取实时行情响应
*/
message MarketGetRealTimeIndexsResp {
  repeated DBMarketIndexRealTimeItem Items = 1; //@go_tags(`json:"items"`)
}

